Сделал отображение UI клиента

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "qudpsocket": "cpp"
+        "qudpsocket": "cpp",
+        "qdialog": "cpp",
+        "qwidget": "cpp"
     }
 }
