Сделал основу передачи данных между клиентом/сервером. продолжение работы по UI сервера

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "files.associations": {
-        "qudpsocket": "cpp",
-        "qdialog": "cpp",
-        "qwidget": "cpp"
+        "deque": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "qgraphicssvgitem": "cpp",
+        "new": "cpp",
+        "qcoreapplication": "cpp"
     }
 }
