--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -20,9 +20,10 @@ target_sources(Client PRIVATE
     ${UI_HEADERS}
 )
 
+# Указываем директорию для сгенерированных файлов и подключения заголовков
 target_include_directories(Client PRIVATE ${CMAKE_CURRENT_BINARY_DIR} Src/GUI)
 
-target_link_libraries(Client PRIVATE Qt6::Core Qt6::Network Qt6::Widgets)
+target_link_libraries(Client PRIVATE Qt6::Core Qt6::Network Qt6::Widgets Qt6::Svg Qt6::Gui)
 
 # Включаем автоматическую генерацию MOC-файлов
 set_target_properties(Client PROPERTIES AUTOMOC ON)
